--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.sonarqube'
@@ -39,8 +40,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.projectlombok:lombok:1.18.4'
+	annotationProcessor('org.projectlombok:lombok:1.18.4')
+    implementation('org.projectlombok:lombok:1.18.4')
 	compile 'mysql:mysql-connector-java:8.0.13'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
+	testCompile('org.junit.jupiter:junit-jupiter-params:5.3.2')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.3.2')
 }
