--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,11 @@
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa_demo?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/recipes?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
+server.port=9292
 
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.minimum-idle=5
@@ -24,7 +26,8 @@ spring.datasource.hikari.maximum-pool-size=12
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.javax.persistence.jdbc.driver = com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto = update
