--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,4 +24,10 @@ node {
 	stage('Deploy') {
 		echo 'Deploying....'
 	}
+	
+	post {
+        failure {
+            hipchatSend color: 'RED', notify: true, v2enabled: true, message: "<a href=${RUN_DISPLAY_URL}>Pipeline failed </a>at stage: ${STAGE}. Click to <a href=${RUN_CHANGES_DISPLAY_URL}>view changelist.</a>"
+        }
+    }
 }
