Added the shared library to validate

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,29 @@ node {
         serverDomain = "localhost"
     }
 	
-	post {
-        failure {
-            hipchatSend color: 'RED', notify: true, v2enabled: true, message: "<a href=${RUN_DISPLAY_URL}>Pipeline failed </a>at stage: ${STAGE}. Click to <a href=${RUN_CHANGES_DISPLAY_URL}>view changelist.</a>"
-        }
-    }
+	stage('SCM') {
+		echo 'Gathering code from version control'
+		git branch: '${branch}', url: 'https://github.com/Rama000777/jpademo.git'
+	}
+	stage('Build') {
+		try {
+			echo 'Building....'
+			bat 'gradle --version'
+			bat 'gradle clean build'
+			echo 'Building new feature'
+			releasenotes()
+		} catch(ex) {
+			echo 'Something went wrong'
+			echo ex.toString()
+			currentBuild.result = 'FAILURE'
+		} finally {
+			// clean up
+		}
+	}
+	stage('Test') {
+		echo 'Testing....'
+	}
+	stage('Deploy') {
+		echo 'Deploying....'
+	}
 }
