--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,11 @@
 node {
 	
+	@Library("releasenotes") _
+    standardPipeline {
+        projectName = "jpademo"
+        serverDomain = "localhost"
+    }
+	
 	stage('SCM') {
 		echo 'Gathering code from version control'
 		git branch: '${branch}', url: 'https://github.com/Rama000777/jpademo.git'
