Updated the code

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,32 +1,4 @@
 node {
 	
-	@Library("releasenotes") _
-    standardPipeline {
-        projectName = "jpademo"
-        serverDomain = "localhost"
-    }
-	
-	stage('SCM') {
-		echo 'Gathering code from version control'
-		git branch: '${branch}', url: 'https://github.com/Rama000777/jpademo.git'
-	}
-	stage('Build') {
-		try {
-			echo 'Building....'
-			bat 'gradle clean build'
-			releasenotes()
-		} catch(ex) {
-			echo 'Something went wrong'
-			echo ex.toString()
-			currentBuild.result = 'FAILURE'
-		} finally {
-			// clean up
-		}
-	}
-	stage('Test') {
-		echo 'Testing....'
-	}
-	stage('Deploy') {
-		echo 'Deploying....'
-	}
+	genericpipeline()
 }
